//
//   Copyright 2013-2014 AppDynamics.
//   All rights reserved.
//

import "Common.proto";

option java_package = "appdynamics.pb";

package appdynamics.pb.Instrumentation;

message MethodEntityCollector
{
    enum Type
    {
        INVOKED_OBJECT = 1;
        RETURN_VALUE = 2;
        PARAMETER = 3;
    }
    optional Type type = 1 [ default = RETURN_VALUE ];
    optional int32 parameterIndex = 2;
}

message Operator
{
    message Comparison
    {
        required ExpressionNode lhs = 1;
        required ExpressionNode rhs = 2;
    }

    message And
    {
        repeated ExpressionNode operands = 1;
    }

    message Or
    {
        repeated ExpressionNode operands = 1;
    }

    message Not
    {
        required ExpressionNode operand = 1;
    }

    message Getter
    {
        required string field = 1;
        required ExpressionNode base = 2;
    }

    message Caller
    {
        required string method = 1;
        repeated ExpressionNode params = 2;
        required ExpressionNode base = 3;
    }

    message StringMatch
    {
        required Common.StringMatchCondition condition = 1;
        required ExpressionNode input = 2;
    }
}

message ExpressionNode
{
    enum Type
    {
        // operation types
        EQUALS          = 1;
        NOT_EQUALS      = 2;
        LT              = 3;
        GT              = 4;
        LE              = 5;
        GE              = 6;
        NOT             = 7;
        AND             = 8;
        OR              = 9;
        GETTER          = 10;
        CALLER          = 11;
        STRINGMATCH     = 12;

        // value types (high bit is set for easier testing)
        ENTITY          = 128;
        STRING          = 129;
        INTEGER         = 130;
    }

    optional Type type = 1 [ default = STRING ];

    // Value node
    optional MethodEntityCollector entityValue = 2;
    optional string stringValue = 3;
    optional int64 integerValue = 4;

    // n-ary operator node with operands
    optional Operator.Comparison comparisonOp = 5;
    optional Operator.And andOp = 6;
    optional Operator.Or orOp = 7;
    optional Operator.Not notOp = 8;
    optional Operator.Getter getterOp = 9;
    optional Operator.Caller callerOp = 10;
    optional Operator.StringMatch stringMatchOp = 11;
}

message ClassMatch
{
    enum Type
    {
        MATCHES_CLASS = 1;
        IMPLEMENTS_INTERFACE = 2;
        INHERITS_CLASS = 3;
        HAS_ANNOTATION = 4;
    }
    optional Type type = 1 [ default = MATCHES_CLASS ];
    required string className = 2;

    extensions 100 to 199;
}

message FileMatch
{
    required string fileName = 1;
}

message MethodMatch
{
    required string methodName = 1;
    optional ExpressionNode matchCondition = 2;
}

message ClosureMatch
{
    required string fileName = 1;
    required int32 startLineNo = 2;
    required int32 endLineNo = 3;
    optional ExpressionNode matchCondition = 4;
}

message InstrumentationProbe
{
    message Java
    {
        required ClassMatch classMatch = 1;
        required MethodMatch methodMatch = 2;
        optional bool noParams = 3;
        repeated string methodParamTypes = 4;
    }

    message PHP
    {
        optional ClassMatch classMatch = 1;
        optional MethodMatch methodMatch = 2;
        optional FileMatch fileMatch = 3;
        optional ClosureMatch closureMatch = 4;
    }

    message NodeJS
    {
        optional MethodMatch methodMatch = 1;
        optional ClosureMatch closureMatch = 2;
    }

    optional Java javaDefinition = 1;
    optional PHP phpDefinition = 2;
    optional NodeJS nodejsDefinition = 3;
}

message CustomMetricDefinition
{
    enum Rollup
    {
        AVERAGE = 1;
        SUM = 2;
    }

    required string name = 1;
    required Rollup rollup = 2;
    required ExpressionNode data = 3;
    optional int32 scale = 4 [ default = 1 ];
}

message InformationPoint
{
    required InstrumentationProbe probe = 1;
    repeated CustomMetricDefinition metricDefinitions = 2;
    // this will also have an 'id' field in the future, when info points get an
    // actual UI and controller migrates to use the new DTO
}

message MethodDataGathererConfig
{
    required int64 id = 1;
    required InstrumentationProbe probe = 2;
    repeated MethodDataToCollect methodDataToCollect = 3;
}

message MethodDataToCollect
{
    required string name = 1;
    required ExpressionNode data = 2;
}

